compiler/testData/diagnostics/tests/generics/innerClasses/implicitArguments/runtimeCrashOnInnerWithImplicitOutArgument.diag.txt
/runtimeCrashOnInnerWithImplicitOutArgument.kt:14:23: error: Type parameter 'T' is declared as 'out' but occurs in 'in' position in type 'Out<T (of class Out<out T>)>.Inner'.
